--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 32
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "example.com.colortest"
+        applicationId "com.rumit.dynamic_theme_color"
         minSdkVersion 15
         targetSdkVersion 32
         versionCode 1
