--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="example.com.colortest">
+    package="com.rumit.dynamic_theme_color">
 
     <application
         android:allowBackup="true"
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-                  android:theme="@style/AppThemeDarkActionBar">
+        <activity
+            android:name="com.rumit.dynamic_theme_color.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppThemeDarkActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
